tests/specs/run/bare_specifier_without_import/main.ts
import "@std/dotenv/load";

console.log(Deno.env.get("GREETING")); // hello world
